# timmy

./: .gitignore  README.md  pyproject.toml
docs/: analysis.md
tests/: test_corpus_build.py  test_corpus_diff.py  test_dataset_ops.py  test_run_diff.py  test_saved_queries.py
timmy/: __init__.py  analysis_views.py  app.py  cli.py  config.py  corpus_job.py  dataset.py  dataset_job.py  dataset_ops.py  dataset_views.py  docsgen.py  filters.py  logging_setup.py  main.py  opensearch.py  output.py  records.py  run_diff_cache.py  runs_views.py  source_stats.py  sources.py  sources_views.py  transmog.py
timmy/analysis/: __init__.py  corpus.py  flatten.py  queries.py  run_diff.py  scope.py  store.py
timmy/docs/: __init__.py  overview.md  playbooks.md  sources.md  transmogrifier.md
timmy/templates/: _nav.html  _report_table.html  _scope_banner.html  analysis_detail.html  analysis_empty.html  analysis_index.html  analysis_job.html  analysis_object.html  analysis_records.html  analysis_run.html  analysis_run_job.html  analysis_sql.html  analysis_values.html  dataset.html  dataset_job.html  index.html  record.html  records.html  runs.html  sources.html  versions.html
