[project]
name = "timmy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "flask>=3.1.3",
    "flask-shell-ipython>=0.5.3",
    "timdex-dataset-api",
    "tomli-w>=1.0",
]

[project.scripts]
timmy = "timmy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timmy"]

[tool.uv.sources]
timdex-dataset-api = { git = "https://github.com/MITLibraries/timdex-dataset-api" }

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "ruff>=0.15.10",
]
