[project]
name = "timmy"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "flask>=3.1.3",
    "flask-shell-ipython>=0.5.3",
    "timdex-dataset-api",
    "tomli-w>=1.0",
]

[project.scripts]
timmy = "timmy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timmy"]
# Runtime data files (templates loaded by Flask, docs/*.md read by
# timmy.docsgen via importlib.resources). Excluded from the normal, VCS-aware
# file selection and force-included instead, so they ship unconditionally even
# if a future .gitignore pattern would otherwise drop them. The exclude prevents
# the double-add that force-include + default selection would otherwise cause.
exclude = ["timmy/templates", "timmy/docs"]

[tool.hatch.build.targets.wheel.force-include]
"timmy/templates" = "timmy/templates"
"timmy/docs" = "timmy/docs"

[tool.uv.sources]
timdex-dataset-api = { git = "https://github.com/MITLibraries/timdex-dataset-api" }

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "ruff>=0.15.10",
]
